# bakery-ops

./: .gitignore  IMPROVEMENT-PLAN.md  README.md  architecture-review.md  deploy.sh  structure.md
.omc/state/: hud-stdin-cache.json
bakery-ops/: .gitignore  CONSOLIDATION-REPORT.md  OPTIMIZATION-REPORT.md  README.md  bot-only.ts  com.hotcrush.bakery-ops.plist  debug-imports.ts  next.config.ts  package-lock.json  package.json  server.ts  start-daemon.sh  tsconfig.json  users.example.json  vitest.config.ts
bakery-ops/docs/: data-caliber.md  review-system-plan.md
bakery-ops/scripts/: batch-greet.ts  build-server.mjs  check-migrations.ts  clear-queued.ts  e2e-test.ts  send-greeting.ts  team-list.mjs  team-sync.ts
bakery-ops/scripts/explore/: jobstreet-relogin.ts  kl_influencers.py  (+66 more)
bakery-ops/services/lightrag/: .gitignore  com.hotcrush.lightrag.plist  config.py  pyproject.toml  server.py
bakery-ops/src/: bootstrap.ts  instrumentation.ts
res_api/: .env.example  .gitignore  API.md  apply-items-by-hour.js  apply-translations.js  backfill-daily-sales.js  daily-refresh.sh  fetch-translations.js  inspect.js  intraday-refresh.sh  login.js  openapi.yaml  package-lock.json  package.json  postman_collection.json  probe-click-analysis.js  probe-dims.js  probe-enum.js  probe-login.js  probe-orders.mjs  probe-waste.js  scan-reports.js  scheduler.js  scrape-daily.js  scrape-intraday.mjs  scrape-item-last-sale.mjs  scrape-items-by-hour.js  scrape-order-analysis.mjs  scrape.js  server.js  shops.json  sync-pnl.js  sync-to-db.js  test-api.js  to-csv.js
res_api/lib/: csv-parser.js
(+314 files in other folders)
